<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlueBlaze</string>
    <string name="dialog_parameter_name_hint">Enter parameter name..</string>
    <string name="dialog_parameter_value_hint">Enter parameter value..</string>
    <string name="dialog_add_parameter_title">Add new parameter</string>
    <string name="dialog_edit_parameter_title">Edit parameter</string>
    <string name="menu_add_new">New Parameter</string>
    <string name="menu_show_console">Console</string>
    <string name="menu_show_list">Show List</string>
    <string name="menu_sync">Sync</string>

    <string name="ex_parameter_not_found">Word not found.</string>
    <string name="alert_invalid_input">Invalid input !</string>



    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
