<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_new_word"
        android:icon="@drawable/ic_add_new"
        android:title="@string/menu_add_new"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/menu_item_show_console"
        android:title="@string/menu_show_console"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_sync"
        android:title="@string/menu_sync"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
        app:showAsAction="always"
        android:title="@string/secure_connect"/>

    <item
        android:id="@+id/insecure_connect_scan"
        app:showAsAction="never"
        android:title="@string/insecure_connect"/>

    <item
        android:id="@+id/discoverable"
        app:showAsAction="never"
        android:title="@string/discoverable"/>


</menu>